plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'kotlin-kapt'
    id 'com.google.dagger.hilt.android' version "2.44"
}

android {
    namespace 'com.jakov.trakt.moviestraktapp'
    compileSdk 32

    defaultConfig {
        applicationId "com.jakov.trakt.moviestraktapp"
        minSdk 29
        targetSdk 32
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        buildConfigField 'String', 'TRAKT_API_KEY', '"4b44d6800580c790a3a415f50f2c0e7973e6335446c2ec396b03db10535928f9"'
        buildConfigField 'String', 'OMDB_API_KEY', '"ea8ab7a0"'
        buildConfigField 'String', 'THE_MOVIE_DB_API_KEY', '"03b8572954325680265531140190fd2a"'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding true
        compose = true
    }

    composeOptions {
        kotlinCompilerExtensionVersion = "1.3.1"
    }

    testOptions {
        unitTests.all {
            useJUnitPlatform()
        }
    }
}

dependencies {

    implementation 'androidx.appcompat:appcompat:1.5.1'
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

    // navigation
    implementation 'androidx.navigation:navigation-fragment:2.5.2'
    implementation 'androidx.navigation:navigation-ui:2.5.2'

    // hilt
    implementation "com.google.dagger:hilt-android:2.44"
    kapt "com.google.dagger:hilt-compiler:2.44"

    // Gilde
    implementation 'com.github.bumptech.glide:glide:4.14.2'
    kapt 'com.github.bumptech.glide:compiler:4.14.2'
    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"

    //Rx
    implementation "io.reactivex.rxjava2:rxjava:2.2.21"
    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"

    //Retrofit
    implementation "com.squareup.retrofit2:retrofit:2.9.0"
    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"

    //Moshi
    implementation "com.squareup.moshi:moshi:1.13.0"
    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"

    //okhttp
    implementation "com.squareup.okhttp3:okhttp:4.9.3"
    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"

    //Timber
    implementation "com.jakewharton.timber:timber:5.0.1"

    //Compose
    implementation "androidx.compose.ui:ui:1.1.0"
    implementation "androidx.compose.material:material:1.1.0"
    implementation "androidx.compose.ui:ui-tooling:1.1.0"
    implementation "androidx.compose.foundation:foundation-layout:1.1.0"
    implementation "com.google.accompanist:accompanist-appcompat-theme:0.23.1"
    implementation "androidx.compose.runtime:runtime-livedata:1.0.0"

    // tests
    testImplementation "io.mockk:mockk:1.12.3"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.9.0"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.9.0"
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"

}

kapt {
    correctErrorTypes true
}